# django-decide-host

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  test-app.yml
decide_host/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
decide_host/management/commands/: import_trials.py  merge_subjects.py
decide_host/migrations/: 0001_initial.py  0002_alter_component_options_alter_controller_options_and_more.py
decide_host/tests/: settings.py  test_models.py  test_serializers.py  test_views.py  urls.py
