[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-decide-host"
version = "0.3.11"
description = "A Django-based database for trials and events in the decide operant control system"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "BSD 3-Clause License"}
authors = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
maintainers = [
    {name = "C Daniel Meliza", email = "dan@meliza.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django~=5.2",
    "djangorestframework",
    "djangorestframework-link-header-pagination",
    "django-filter>=22.1",
]

[project.urls]
Homepage = "https://github.com/melizalab/django-decide-host"

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.10,<3",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3,<9",
    "pytest-django>=4.9.0",
    "ruff>=0.7.0",
    "pytest-dotenv>=0.5.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "decide_host.tests.settings"
django_find_project = false
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=decide_host --cov-report=term-missing"
testpaths = ["decide_host/tests"]
env_files = [".env", ".test.env", "deploy.env"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["build", "attic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
ignore = ["E221", "E501", "E701", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.hatch.build]
include = ["decide_host/**"]
exclude = ["*test*"]
artifacts = ["README.rst"]
